# readfile

./: Cargo.toml  example.txt
src/: main.rs
