[package]
name = "readfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
rev_lines = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
